--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".Activities.ColorActivity"
+            android:exported="true">
+
+        </activity>
         <activity android:name=".Activities.SignUpActivity"
             android:exported="true">
 
